<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">



    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:textAlignment="center"
        />

    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/text_global_summary"
            android:textSize="20sp"
            android:textStyle="bold"
         />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">
                <LinearLayout
                android:layout_width="0dp"
                    android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/ic_info" />
                    <TextView
                        android:id="@+id/text_view_infected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_infected"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/ic_info_red" />
                    <TextView
                        android:id="@+id/text_view_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/empty"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_deaths"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/ic_info_green" />
                    <TextView
                        android:id="@+id/text_view_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/empty"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_recovered"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_symptoms"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="30dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/headache" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_headache"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="30dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/caugh" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cough"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="30dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/fever" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_fever"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_prevention"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold" />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="30dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/wear_mask" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_wear_mask"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_wear_mask_description"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="30dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/empty"
                        android:src="@drawable/wash_hands" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_wash_hands"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_wash_hands_description"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>